# fe_enriched

./: .gitignore  CMakeLists.txt  README.md  step-1.cc
examples/: step-1_simple.cc  step-1_tria.cc
include/: estimate_enrichment.h  functions.h  helper.h  paramater_reader.h  solver.h  solver_trilinos.h  support.h
src/: CMakeLists.txt  estimate_enrichment.cc  step.cc  step.prm  support.cc
tests/: tests.h
tests/step/: CMakeLists.txt  atom_n2.data  atom_n3.data  atom_n3_100.data  atom_n3_25.data  atom_n3_4.data  atom_n3_50.data  atom_n3_8.data  five_source.mpirun=1.output  five_source.mpirun=2.output  five_source.mpirun=3.output  five_source.mpirun=5.output  five_source.prm  five_source_3d.mpirun=2.output  five_source_3d.mpirun=3.output  five_source_3d.mpirun=5.output  five_source_3d.output  five_source_3d.prm  multiple_source.prm  multiple_source_2d_enr.prm  multiple_source_enriched.output  multiple_source_enriched.prm  output  single_source.output  single_source.prm  single_source_known_solution.mpirun=1.output  single_source_known_solution.mpirun=2.output  single_source_known_solution.mpirun=3.output  single_source_known_solution.mpirun=5.output  single_source_known_solution.output  single_source_known_solution.prm  single_source_known_solution_enriched.mpirun=1.output  single_source_known_solution_enriched.mpirun=2.output  single_source_known_solution_enriched.mpirun=3.output  single_source_known_solution_enriched.mpirun=5.output  single_source_known_solution_enriched.output  single_source_known_solution_enriched.prm  (+10 more)
utilities/: astyle.rc  indent
(+38 files in other folders)
